--- a/youtube.css
+++ b/youtube.css
@@ -17,16 +17,26 @@
   display: block;
 }
 
+.search-bar {
+  display: block;
+}
+
 .video-title {
   width: 300px;
+  display: block;
 }
 
 .video-author {
-  display: inline-block;
+  display: block;
 }
 
 .video-stats {
-  display: inline-block;
+  display: block;
 }
 
-
+.video-preview {
+  width: 300px;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 15px;
+}
