add styles for grid layout

--- a/youtube.css
+++ b/youtube.css
@@ -51,15 +51,9 @@ p {
   margin-right: 15px;
 }
 
-.channel-picture {
-  vertical-align: top;
-  display: inline-block;
-  width: 50px;
-}
-
-.video-info {
-  display: inline-block;
-  width: 200px;
+.video-info-grid {
+  display: grid;  
+  grid-template-columns: 50px 1fr;
 }
 
 .profile-picture {
