--- a/styles/header.css
+++ b/styles/header.css
@@ -16,19 +16,6 @@
   align-items: center;
 }
 
-.right-section {
-  width: 200px;
-}
-
-.middle-section {
-  background-color: lightpink;
-  flex: 1;
-  margin-left: 70px;
-  margin-right: 35px;
-  max-width: 500px;
-}
-
-
 .hamburger-menu {
   height: 24px;
   margin-left: 24px;
@@ -37,4 +24,56 @@
 
 .youtube-logo {
   height: 20px;
+}
+
+.middle-section {
+  flex: 1;
+  margin-left: 70px;
+  margin-right: 35px;
+  max-width: 500px;
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  flex: 1;
+  height: 36px;
+  padding-left: 10px;
+  font-size: 16px;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 2px;
+  box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+}
+
+.search-bar::placeholder {
+  font-family: 'Roboto', Arial;
+  font-size: 16px;
+
+}
+
+.search-btn {
+  height: 40px;
+  width: 66px;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid rgb(192, 192, 192);
+  margin-left: -1px;
+  margin-right: 10px;
+}
+
+.search-icon {
+  height: 25px;
+  margin-top: 4px;
+}
+
+.voice-search-btn {
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  border: none;
+  margin-top: 4px;
+  background-color: rgb(248, 248, 248);
+}
+
+.right-section {
+  width: 200px;
 }
