--- a/styles/header.css
+++ b/styles/header.css
@@ -39,6 +39,7 @@
   border: 1px solid rgb(192, 192, 192);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width: 0;
 }
 
 .search-bar::placeholder {
@@ -48,7 +49,7 @@
 }
 
 .search-btn {
-  height: 40px;
+  height: 39px;
   width: 66px;
   background-color: rgb(240, 240, 240);
   border: 1px solid rgb(192, 192, 192);
