--- a/intro-to-html/Lesson 15/15f.css
+++ b/intro-to-html/Lesson 15/15f.css
@@ -37,4 +37,10 @@ button {
   cursor: pointer;
   border: 1px solid black;
   padding: 8px 20px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+button:hover {
+  color: white;
+  background-color: black;
 }
