--- a/styles/header.css
+++ b/styles/header.css
@@ -52,9 +52,8 @@
 }
 
 .search-bar::placeholder {
-  font-family: 'Roboto', Arial;
+  font-family: "Roboto", Arial;
   font-size: 16px;
-
 }
 
 .search-btn {
@@ -66,9 +65,47 @@
   margin-right: 10px;
 }
 
+.search-btn,
+.voice-search-btn,
+.upload-icon-container, 
+.yt-apps-icon-container,
+.notifications-icon-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-btn .tooltip,
+.voice-search-btn .tooltip,
+.upload-icon-container .tooltip,
+.yt-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
+  position: absolute;
+  bottom: -50px;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+
+  background-color: rgba(96, 96, 96, 0.9);
+  color: white;
+  padding: 9px 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.15s;
+  white-space: nowrap;
+}
+
+.search-btn:hover .tooltip,
+.voice-search-btn:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.yt-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
+  opacity: 1;
+}
+
 .search-icon {
   height: 25px;
-  margin-top: 4px;
 }
 
 .voice-search-btn {
@@ -89,7 +126,9 @@
   flex-shrink: 0;
 }
 
-.upload-icon, .yt-apps-icon, .notifications-icon {
+.upload-icon,
+.yt-apps-icon,
+.notifications-icon {
   height: 24px;
 }
 
