--- a/styles/video.css
+++ b/styles/video.css
@@ -37,6 +37,56 @@
   grid-template-columns: 50px 1fr;
 }
 
+.profile-container {
+  position: relative;
+  width: 36px; 
+  height: 36px;
+}
+
+.profile-tooltip {
+  background-color: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 50px;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  display: flex;
+  column-gap: 10px;
+  padding: 15px;
+  z-index: 100;
+  opacity: 0;
+  white-space: nowrap;
+  justify-content: center;
+  pointer-events: none;
+  box-shadow: 2px 2px 10px rgb(176, 176, 176);
+}
+
+.tooltip-img {
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+}
+
+.profile-container:hover .profile-tooltip {
+  opacity: 1;
+}
+
+.tooltip-img-container, .tooltip-txt-xontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tooltip-txt-container h3 {
+  color: black;
+  margin: 10px 0;
+}
+
+.tooltip-txt-container p {
+  color: rgb(96, 96, 96);
+}
+
+
 .profile-picture {
   /* width: 50px; */
   /* width: 100%; */
