--- a/styles/video.css
+++ b/styles/video.css
@@ -58,6 +58,7 @@
   justify-content: center;
   pointer-events: none;
   box-shadow: 2px 2px 10px rgb(176, 176, 176);
+  transition: opacity 0.2s;
 }
 
 .tooltip-img {
