--- a/styles/video.css
+++ b/styles/video.css
@@ -1,4 +1,4 @@
-.thumbnail {     
+.thumbnail {
   width: 100%;
 }
 
@@ -10,7 +10,8 @@
   margin-bottom: 10px;
 }
 
-.video-title a, .channel-link {
+.video-title a,
+.channel-link {
   text-decoration: none;
 }
 
@@ -22,7 +23,8 @@
   color: rgb(96, 96, 96);
 }
 
-.video-author, .video-stats {
+.video-author,
+.video-stats {
   font-style: 12px;
   color: rgb(96, 96, 96);
 }
@@ -31,15 +33,14 @@
   margin-bottom: 4px;
 }
 
-
 .video-info-grid {
-  display: grid;  
+  display: grid;
   grid-template-columns: 50px 1fr;
 }
 
 .profile-container {
   position: relative;
-  width: 36px; 
+  width: 36px;
   height: 36px;
 }
 
@@ -71,7 +72,8 @@
   opacity: 1;
 }
 
-.tooltip-img-container, .tooltip-txt-xontainer {
+.tooltip-img-container,
+.tooltip-txt-xontainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -86,7 +88,6 @@
 .tooltip-txt-container p {
   color: rgb(96, 96, 96);
 }
-
 
 .profile-picture {
   /* width: 50px; */
@@ -108,13 +109,19 @@
   row-gap: 40px;
 }
 
+@media (max-width: 750px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .video-time {
   background-color: black;
   color: white;
   position: absolute;
   bottom: 8px;
   right: 5px;
-  font-family: Roboto,Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: 500;
   padding: 4px;
