--- a/styles/video.css
+++ b/styles/video.css
@@ -25,7 +25,7 @@
 
 .video-author,
 .video-stats {
-  font-style: 12px;
+  font-size: 12px;
   color: rgb(96, 96, 96);
 }
 
@@ -49,7 +49,6 @@
   border-radius: 6px;
   position: absolute;
   top: 50px;
-  font-family: Roboto, Arial, Helvetica, sans-serif;
   display: flex;
   column-gap: 10px;
   padding: 15px;
@@ -108,21 +107,21 @@
   column-gap: 16px;
   row-gap: 40px;
 }
-/* Media query for 0 to 750px */
+/* Media query for width of 0 to 750px */
 @media (max-width: 750px) {
   .video-grid {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-/* Media Query for 751px to 999px */
+/* Media Query for width of 751px to 999px */
 @media (min-width: 751px) and (max-width: 999px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-/* Media query for 1000px and over */
+/* Media query for width of 1000px and over */
 @media (min-width: 1000px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -135,7 +134,6 @@
   position: absolute;
   bottom: 8px;
   right: 5px;
-  font-family: Roboto, Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: 500;
   padding: 4px;
