--- a/styles/video.css
+++ b/styles/video.css
@@ -4,7 +4,7 @@
 
 .video-title {
   margin-top: 0;
-  font-style: 14px;
+  font-size: 14px;
   font-weight: 500;
   line-height: 20px;
   margin-bottom: 10px;
