--- a/styles/video.css
+++ b/styles/video.css
@@ -126,6 +126,16 @@
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+
+  .video-title {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .video-author, .video-stats {
+    font-size: 14px;
+  }
+
 }
 
 .video-time {
