--- a/styles/general.css
+++ b/styles/general.css
@@ -1,13 +1,15 @@
-body {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding-top: 80px;
-  padding-left: 96px;
-  padding-right: 24px;
-  background-color: rgb(248, 248, 248);
-}
+@media (max-width: 1200px) {
+  body {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding-top: 80px;
+    padding-left: 96px;
+    padding-right: 24px;
+    background-color: rgb(248, 248, 248);
+  }
 
-p {
-  margin-top: 0;
-  margin-bottom: 0;
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
